correct position of books img to not overlap footer

--- a/client/styles/_welcome.scss
+++ b/client/styles/_welcome.scss
@@ -2,11 +2,11 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  margin: 20px 0 0;
-  position: absolute;
+  margin: 10px 0;
   width: 95%;
 
   .welcomeChild {
     //border: 1px solid red;
+    //margin-bottom: 10px;
   }
 }
